@@ -8,6 +8,9 @@
  - obspy.db:
    * Fixed a bug in obspy-indexer command line script (see #1369,
      command line script was not working, probably since 0.10.0)
+ - obspy.signal:
+   * PPSD.plot(): fix plotting of percentiles, mode and mean and setting
+     period limits when using "xaxis_frequency=True" (see #1406, #1416)
 
 1.0.1: (doi: 10.5281/zenodo.48254)
  - General:
